src/assets/scss/_editor.scss
.editor-section {
  position: fixed;
  top: 80px;
  left: 0;
  right: 0;
  background: $white;
  border-bottom: 1px solid $soft-gray;
  .header-document {
    border-bottom: 1px solid $soft-gray;
    .form {
      .form-group {
        margin: 0;
      }
      .input-group-addon {
        @include border-radius(0);
        background: none;
        border: none;
        &[class^="icon-"]:before, &[class*=" icon-"]:before {
          font-size: 35px;
          margin-top: 5px;
          display: inline-block;
        }
      }
      input.form-control {
        border: none;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
        height: 90px;
        font-style: italic;
        color: $text-color-blend;
        font-size: 20px;
        font-family: 'Rubik', sans-serif;
        font-weight: 300;
      }
    }
    .btn {
      &.btn-with-icon {
        margin-top: 25px;
        padding: 0px 20px 0 15px;
      }
    }
    .participants {
      min-width: 15em;
      margin-top: 25px;
      margin-right: 1em;
      .not-avatar, .user-avatar {
        margin-left: 8px;
        &:first-child {
          margin-left: 0;
        }
      }
      .not-avatar {
        width: 40px;
        height: 40px;
        padding-top: 9px;
        color: $text-color-blend;
        font-size: 18px;
        font-family: 'Rubik', sans-serif;
        font-weight: 300;
        text-align: center;
        display: inline-block;
        vertical-align: middle;
        position: relative;
        background-color: lighten($primary-color, 55%);
        @include border-radius(20px);
      }
      .user-avatar {
        display: inline-block;
        vertical-align: middle;
        padding-left: 0;
        padding-right: 0;
      }
      .contributors {
        display: inline-block;
        img {
          margin-left: 10px !important;
          z-index: 5;
          position: relative;
          &:first-child {
            z-index: 10;
          }
          &:last-child {
            z-index: 1;
          }
          &:hover {
            z-index: 15;
          }
        }
      }
      .view-more {
        display: inline-block;
        margin-left: 10px;
        position: relative;
        .icon {
          font-size: 20px;
        }
        .drowdown-box {
          display: none;
          text-align: left;
          position: absolute;
          top: -14px;
          left: 0;
          width: 150px;
          background-color: $white;
          padding: 10px 10px 0;
          border: 1px solid $soft-gray;
          z-index: 5;
          img, .not-avatar {
            margin: 0 10px 10px 0;
          }
        }
        &:hover {
          .drowdown-box {
            display: block;
          }
        }
      }
    }
  }
  .toolbox {
    height: 60px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    overflow-x: scroll;
    overflow-y: hidden;
    & > [class*='col-'] {
      align-self: center;
      margin: auto;
    }
    .toolbox-2 {
      min-width: 8em;
    }
    .toolbox-4 {
      min-width: 9em;
    }
    .toolbox-5 {
      min-width: 11em;
    }
    .divider {
      width: 1px;
      height: 100%;
      background-color: $soft-gray;
    }
    .btn {
      padding: 0;
      border: none;
      background: none;
      [class^="icon-"]:before, [class*=" icon-"]:before {
        font-size: 30px;
        vertical-align: middle;
        margin-top: 8px;
        display: inline-block;
      }
    }
    .icon-caret {
      color: $caret-gray;
      display: inline-block;
      width: 10px;
      &:before {
        margin-left: -11px;
      }
    }
    .dropdown {
      display: inline-block;
      .dropdown-menu {
        top: 48px;
        width: 205px;
        padding: 0;
        margin: 0;
        border: none;
        border-top: 1px solid $soft-gray;
        @include border-radius(0);
        @include box-shadow(0px, 2px, 4px, transparentize(rgb(139, 111, 111), 0.78));
        .icon {
          color: $text-color;
          display: inline-block;
          &:before {
            font-size: 30px;
            padding-top: 5px;
            display: inline-block;
          }
          &:hover {
            cursor: pointer;
            color: $text-color-blend;
          }
        }
      }
    }
  }
}

.editor-box-container {
  padding: 180px 105px 30px;
  background-color: $bg-gray;
  #editor-container {
    background-color: $white;
    border: 1px solid $soft-gray;
    min-height: 1200px;
    padding: 60px 80px;
    max-width: 1170px;
    min-width: 800px;
  }
  .wave-editor-on {
    outline: none;
  }
}

